Update help, some code cleanup